add logo description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="logo" href="index.html">
             <img class="img" src="images/logo/modest.png" alt="not found">
           </a>
-            <div class="logo-description"></div>
+            <div class="logo-description">Lorem ipsum </div>
           </div>
           <div class="header-right">
             <nav class="header-navigation">
