add title to header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <div class="container">
         <div class="header-layout">
           <div class="header-left">
-            <a class="logo" href="index.html">
-            <img class="img" src="images/logo/modest.png" alt="not found">
+            <h1>Hellow Git</h1>
           </a>
             <div class="logo-description">Lorem ipsum </div>
           </div>
