--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <div class="container">
         <div class="header-layout">
           <div class="header-left">
-            <a class="logo" href="index.html">
-            <img class="img" src="images/logo/modest.png" alt="not found">
-          </a>
+            <h2>asdhjkasjd<h2>
             <div class="logo-description">Lorem ipsum </div>
           </div>
           <div class="header-right">
